--- a/index.html
+++ b/index.html
@@ -4,8 +4,152 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>WalzShop — Top Up Game</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+  <style>
+    /* CSS tambahan untuk tampilan carousel dan cards */
+    .hero-coda {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        height: 400px;
+        background-color: #0d1117;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+    .hero-coda::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1629858602685-6d0a7a0b5b2a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover;
+        filter: blur(5px);
+        transform: scale(1.1);
+        z-index: 1;
+    }
+    .hero-content {
+        position: relative;
+        z-index: 2;
+    }
+    .hero-logo {
+        height: 60px;
+        margin-bottom: 1rem;
+    }
+    .hero-title {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 700;
+        font-size: 2.5rem;
+        margin: 0;
+    }
+    .hero-text {
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.2rem;
+        font-weight: 400;
+        margin-top: 0.5rem;
+    }
+
+    .game-cards {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap: 20px;
+        padding: 20px;
+        background-color: #1a1e24;
+        border-radius: 10px;
+    }
+
+    .game-card {
+        background-color: #22272e;
+        border-radius: 8px;
+        overflow: hidden;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        text-align: center;
+        cursor: pointer;
+        position: relative;
+        border: 2px solid transparent;
+    }
+    .game-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        border-color: #007bff;
+    }
+    .game-card img {
+        width: 100%;
+        height: auto;
+        display: block;
+        object-fit: cover;
+    }
+    .game-card h3 {
+        color: #fff;
+        font-size: 1rem;
+        font-weight: 500;
+        padding: 10px;
+        margin: 0;
+        background-color: #2d333b;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    
+    .carousel-section {
+        margin-bottom: 3rem;
+    }
+    .carousel-container {
+        display: flex;
+        overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+        -webkit-overflow-scrolling: touch;
+        gap: 20px;
+        padding-bottom: 20px;
+    }
+    .carousel-container::-webkit-scrollbar {
+        height: 8px;
+    }
+    .carousel-container::-webkit-scrollbar-thumb {
+        background-color: #4a5568;
+        border-radius: 10px;
+    }
+    .carousel-container::-webkit-scrollbar-track {
+        background-color: #2d333b;
+        border-radius: 10px;
+    }
+    .carousel-card {
+        flex: 0 0 300px;
+        scroll-snap-align: start;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s ease;
+        background-color: #22272e;
+    }
+    .carousel-card:hover {
+        transform: translateY(-5px);
+    }
+    .carousel-card img {
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+    }
+    .carousel-card-content {
+        padding: 15px;
+        color: #fff;
+    }
+    .carousel-card h4 {
+        margin: 0 0 10px 0;
+        font-size: 1.2rem;
+    }
+    .carousel-card p {
+        margin: 0;
+        font-size: 0.9rem;
+        color: #a0aec0;
+    }
+  </style>
 </head>
 <body>
   <nav class="navbar">
@@ -24,8 +168,36 @@
   </section>
 
   <main class="container main-coda">
+    <section class="carousel-section">
+      <h2 class="main-title">Rekomendasi Terbaik</h2>
+      <div class="carousel-container">
+        <div class="carousel-card">
+          <img src="https://images.unsplash.com/photo-1628108422678-7a5b3f2712f2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="Card Image 1">
+          <div class="carousel-card-content">
+            <h4>Promo Spesial Genshin Impact</h4>
+            <p>Dapatkan bonus 10% setiap top up Genesis Crystal!</p>
+          </div>
+        </div>
+        <div class="carousel-card">
+          <img src="https://images.unsplash.com/photo-1627855018610-d861f6e2b174?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="Card Image 2">
+          <div class="carousel-card-content">
+            <h4>Diskon Diamond Mobile Legends</h4>
+            <p>Top up 500 Diamond hanya Rp. 100.000!</p>
+          </div>
+        </div>
+        <div class="carousel-card">
+          <img src="https://images.unsplash.com/photo-1627584501239-1b3c2c5e52c8?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="Card Image 3">
+          <div class="carousel-card-content">
+            <h4>Weekly Free Fire Pass</h4>
+            <p>Beli Weekly Pass, dapatkan item eksklusif!</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <h2 class="main-title">Pilih Game</h2>
-    <div id="gamesGrid" class="games-list-coda"></div>
+    <div id="gamesGrid" class="game-cards">
+      </div>
   </main>
 
   <footer class="footer-coda">
