--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
   </nav>
 
   <section class="hero-coda">
-    <div class="hero-content">
-      <img src="https://cdn.codashop.com/global/images/codashop-logo-new.svg" alt="Codashop" class="hero-logo">
-      <h1 class="hero-title">Top Up Game Favoritmu Instan & Aman</h1>
-      <p class="hero-text">Pilih game, masukkan data, langsung isi saldo & item!</p>
+    <div class="hero-slider-coda">
+      <div class="hero-slider-overlay"></div>
+      <div class="hero-content">
+        <h1 class="hero-title">Top Up Game Favoritmu Instan & Aman</h1>
+        <p class="hero-text">Pilih game, masukkan data, langsung isi saldo & item!</p>
+      </div>
     </div>
   </section>
 
