--- a/game.html
+++ b/game.html
@@ -20,6 +20,7 @@
     <section class="game-header-coda">
       <img id="gameBanner" class="game-banner-coda" src="" alt="Game">
       <h1 id="gameTitle" class="game-title-coda"></h1>
+      <p id="gameGuide" class="game-guide-coda"></p>
     </section>
 
     <section class="card-coda">
