--- a/game.html
+++ b/game.html
@@ -1,69 +1,93 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Top Up Game | WalzShop</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Top Up Game | WalzShop</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body data-page="game">
-  <nav class="navbar">
-    <div class="container navbar-inner">
-      <a href="index.html" class="brand-badge"><span class="logo-w">Walz</span><span class="logo-s">Shop</span></a>
-      <a href="index.html" class="btn-back-coda" title="Kembali">&larr;</a>
+    <header class="navbar">
+        <div class="container navbar-container">
+            <a href="index.html" class="brand-logo">
+                <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
+            </a>
+            <a href="index.html" class="btn-back" title="Kembali">&larr;</a>
+        </div>
+    </header>
+
+    <main class="game-main-content container">
+        <section class="game-header">
+            <img id="game-banner" class="game-banner" src="" alt="Game Banner">
+            <h1 id="game-title" class="game-title"></h1>
+            <p id="game-guide" class="game-guide"></p>
+        </section>
+
+        <section class="card-section">
+            <div class="step-guide"><i class="fas fa-user-circle"></i> 1. Masukkan User ID Anda</div>
+            <div class="input-group">
+                <input type="text" id="user-id" maxlength="30" placeholder="User ID Game" autocomplete="off" required>
+            </div>
+            <div class="input-group" id="server-group" style="display:none;">
+                <input type="text" id="server-id" maxlength="10" placeholder="Server ID (jika ada)" autocomplete="off">
+            </div>
+        </section>
+
+        <section class="card-section">
+            <div class="step-guide"><i class="fas fa-diamond"></i> 2. Pilih Nominal</div>
+            <div id="product-grid" class="product-grid"></div>
+        </section>
+
+        <section class="card-section">
+            <div class="step-guide"><i class="fas fa-wallet"></i> 3. Pilih Pembayaran</div>
+            <div id="payment-grid" class="payment-grid"></div>
+        </section>
+
+        <section class="card-section">
+            <div class="step-guide"><i class="fas fa-tags"></i> 4. Voucher Diskon</div>
+            <div class="voucher-group">
+                <input type="text" id="voucher-code" maxlength="12" placeholder="Kode voucher">
+                <button type="button" id="use-voucher-btn" class="btn-primary">Gunakan</button>
+            </div>
+            <div id="voucher-info" class="voucher-info"></div>
+        </section>
+
+        <section class="card-section">
+            <div class="step-guide"><i class="fas fa-cash-register"></i> 5. Ringkasan & Bayar</div>
+            <div id="summary-box" class="summary-box"></div>
+            <button id="checkout-btn" class="btn-checkout">Beli Sekarang</button>
+        </section>
+    </main>
+
+    <div id="modal-overlay" class="modal-overlay">
+        <div id="voucher-modal" class="modal-content modal-voucher">
+            <div class="modal-header">
+                <h3 id="modal-title"></h3>
+                <span class="modal-close-btn">&times;</span>
+            </div>
+            <div class="modal-body">
+                <p id="modal-message"></p>
+            </div>
+        </div>
+        
+        <div id="checkout-modal" class="modal-content modal-checkout">
+            <div class="modal-header">
+                <h3 class="modal-title">Detail Transaksi</h3>
+                <span class="modal-close-btn">&times;</span>
+            </div>
+            <div class="modal-body">
+                <div id="checkout-summary"></div>
+            </div>
+            <div class="modal-footer">
+                <button id="wa-btn" class="btn-primary">Kirim via WhatsApp</button>
+                <button id="email-btn" class="btn-primary">Kirim via Email</button>
+            </div>
+        </div>
     </div>
-  </nav>
 
-  <main class="container game-main-coda">
-    <section class="game-header-coda">
-      <img id="gameBanner" class="game-banner-coda" src="" alt="Game">
-      <h1 id="gameTitle" class="game-title-coda"></h1>
-      <p id="gameGuide" class="game-guide-coda"></p>
-    </section>
-
-    <section class="card-coda">
-      <div class="step-guide-coda"><i class="fas fa-user-circle"></i> 1. Masukkan User ID Anda</div>
-      <div class="input-row-coda">
-        <input type="text" id="userId" maxlength="30" placeholder="User ID Game" autocomplete="off"/>
-      </div>
-      <div class="input-row-coda" id="serverWrap" style="display:none;">
-        <input type="text" id="serverId" maxlength="10" placeholder="Server ID (jika ada)" autocomplete="off"/>
-      </div>
-    </section>
-
-    <section class="card-coda">
-      <div class="step-guide-coda"><i class="fas fa-diamond"></i> 2. Pilih Nominal</div>
-      <div id="productGrid" class="product-grid-coda"></div>
-    </section>
-
-    <section class="card-coda">
-      <div class="step-guide-coda"><i class="fas fa-wallet"></i> 3. Pilih Pembayaran</div>
-      <div id="paymentGrid" class="payment-grid-coda"></div>
-    </section>
-
-    <section class="card-coda">
-      <div class="step-guide-coda"><i class="fas fa-tags"></i> 4. Voucher Diskon</div>
-      <div class="voucher-row-coda">
-        <input type="text" id="voucherCode" maxlength="12" placeholder="Kode voucher"/>
-        <button type="button" id="useVoucherBtn" class="btn-coda btn-voucher">Gunakan</button>
-      </div>
-      <div id="voucherList" class="voucher-list-coda"></div>
-    </section>
-
-    <section class="card-coda">
-      <div class="step-guide-coda"><i class="fas fa-cash-register"></i> 5. Ringkasan & Bayar</div>
-      <div id="summary" class="summary-coda"></div>
-      <button id="checkoutBtn" class="btn-coda btn-checkout">Beli Sekarang</button>
-    </section>
-  </main>
-
-  <footer class="footer-coda">
-    <div class="container">
-      <p>© 2025 <b>WalzShop</b> — Bukan situs resmi publisher game.</p>
-    </div>
-  </footer>
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
