--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>WalzShop — Top Up Game</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WalzShop - Top Up Game</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800;900&display=swap" rel="stylesheet">
 </head>
 <body data-page="index">
-  <nav class="navbar">
-    <div class="container navbar-inner">
-      <a href="#" class="brand-badge"><span class="logo-w">Walz</span><span class="logo-s">Shop</span></a>
-      <span class="nav-note">Top Up Instan & Aman</span>
-    </div>
-  </nav>
+    <header class="navbar">
+        <div class="container navbar-container">
+            <a href="index.html" class="brand-logo">
+                <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
+            </a>
+            <span class="brand-tagline">TOP UP INSTAN & AMAN</span>
+        </div>
+    </header>
 
-  <section class="hero-coda">
-    <div class="hero-slider-coda">
-      <div class="hero-slider-overlay"></div>
-      <div class="hero-content">
-        <h1 class="hero-title">Top Up Game Favoritmu Instan & Aman</h1>
-        <p class="hero-text">Pilih game, masukkan data, langsung isi saldo & item!</p>
-      </div>
-    </div>
-  </section>
+    <section class="hero-section">
+        <div class="hero-slider-wrapper">
+            <div class="hero-slider-overlay"></div>
+            <div class="hero-content container">
+                <h1 class="hero-title">Top Up Game Favoritmu Instan & Aman</h1>
+                <p class="hero-subtitle">Pilih game, masukkan data, langsung isi saldo & item!</p>
+            </div>
+        </div>
+    </section>
 
-  <main class="container main-coda">
-    <h2 class="main-title">Pilih Game</h2>
-    <div id="gamesGrid" class="games-list-coda"></div>
-  </main>
+    <main class="main-content container">
+        <h2 class="section-title">Pilih Game</h2>
+        <div id="games-grid" class="games-grid"></div>
+    </main>
 
-  <footer class="footer-coda">
-    <div class="container">
-      <p>© 2025 <b>WalzShop</b> — Bukan situs resmi publisher game.</p>
-    </div>
-  </footer>
-  <script src="script.js"></script>
+    <footer class="footer">
+        <div class="container footer-content">
+            <p>&copy; 2025 <b>WalzShop</b> — Bukan situs resmi publisher game.</p>
+        </div>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
