--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WalzShop - Top Up Game</title>
+    <title>WalzShop - Top Up Game Instan & Aman</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800;900&display=swap" rel="stylesheet">
@@ -20,11 +20,11 @@
 
     <section class="hero-section">
         <div class="hero-slider-wrapper">
-            <div class="hero-slider-overlay"></div>
-            <div class="hero-content container">
-                <h1 class="hero-title">Top Up Game Favoritmu Instan & Aman</h1>
-                <p class="hero-subtitle">Pilih game, masukkan data, langsung isi saldo & item!</p>
             </div>
+        <div class="hero-slider-overlay"></div>
+        <div class="hero-content container">
+            <h1 class="hero-title">Top Up Game Favoritmu Instan & Aman</h1>
+            <p class="hero-subtitle">Pilih game, masukkan data, langsung isi saldo & item!</p>
         </div>
     </section>
 
@@ -35,7 +35,13 @@
 
     <footer class="footer">
         <div class="container footer-content">
-            <p>&copy; 2025 <b>WalzShop</b> — Bukan situs resmi publisher game.</p>
+            <a href="index.html" class="brand-logo footer-logo">
+                <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
+            </a>
+            <p class="footer-desc">
+                WalzShop adalah platform top-up game yang menyediakan berbagai kebutuhan in-game item dengan proses cepat dan terpercaya.
+            </p>
+            <p class="footer-copyright">&copy; 2025 <b>WalzShop</b> — Bukan situs resmi publisher game.</p>
         </div>
     </footer>
     <script src="script.js"></script>
