--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p class="footer-desc">
                 WalzShop adalah platform top-up game yang menyediakan berbagai kebutuhan in-game item dengan proses cepat dan terpercaya.
             </p>
-            <p class="footer-copyright">&copy; 2025 <b>WalzShop</b> — Bukan situs resmi publisher game.</p>
+            <p class="footer-copyright">&copy; 2025 <b>WalzShop</b> — Website Top up Termurah🔥.</p>
         </div>
     </footer>
     <script src="script.js"></script>
