--- a/game.html
+++ b/game.html
@@ -76,6 +76,16 @@
             <div id="checkout-summary" class="modal-body">
                 </div>
         </div>
+
+        <div id="qris-fullscreen-modal" class="modal-content modal-qris" style="display:none;">
+            <div class="modal-header">
+                <h3>QRIS Pembayaran</h3>
+                <span class="modal-close-btn">&times;</span>
+            </div>
+            <div class="modal-body">
+                <img id="qris-fullscreen-img" src="" alt="QRIS" class="qris-fullscreen-img">
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
