--- a/game.html
+++ b/game.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Up Game - WalzShop</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Top Up Game | Walzlonely.shop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Inter:wght@700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body data-page="game">
@@ -18,72 +18,71 @@
                 <i class="fas fa-arrow-left"></i> Kembali
             </a>
             <a href="index.html" class="brand-logo">
-                <span class="logo-text">WALZ</span><span class="logo-accent">SHOP</span>
+                <span class="logo-text">Walzlonely</span><span class="logo-accent">.shop</span>
             </a>
-            <div class="brand-tagline">
-                Termurah & Terpercaya
-            </div>
         </div>
     </nav>
 
-    <div class="game-main-content container">
+    <main class="container game-main-content">
         <div class="game-header">
             <img id="game-banner" src="" alt="Game Banner" class="game-banner">
             <div class="game-info">
                 <h1 id="game-title" class="game-title">Nama Game</h1>
-                <p id="game-guide" class="game-guide">Panduan menemukan ID.</p>
+                <p id="game-guide" class="game-guide">Panduan menemukan ID game akan muncul di sini.</p>
             </div>
         </div>
 
         <div class="card-section">
-            <h2 class="step-guide"><i class="fas fa-user"></i> Masukkan ID</h2>
+            <h2 class="step-guide"><i class="fas fa-user"></i> Masukkan ID Game</h2>
+            <p class="step-description">Untuk menemukan ID Game, klik pada ikon profil di dalam game.</p>
             <div class="input-group">
                 <input type="text" id="user-id" placeholder="Masukkan User ID">
             </div>
-            <div class="input-group" id="server-group" style="display:none;">
-                <input type="text" id="server-id" placeholder="Masukkan Server ID (opsional)">
+            <div class="input-group" id="server-group" style="display: none;">
+                <input type="text" id="server-id" placeholder="Masukkan Server ID (contoh: 1234)">
             </div>
         </div>
 
         <div class="card-section">
             <h2 class="step-guide"><i class="fas fa-gem"></i> Pilih Nominal</h2>
-            <div id="product-grid" class="product-grid">
+            <p class="step-description">Pilih nominal yang diinginkan, pastikan sesuai dengan kebutuhan Anda.</p>
+            <div class="product-grid" id="product-grid">
                 </div>
         </div>
 
         <div class="card-section">
-            <h2 class="step-guide"><i class="fas fa-dollar-sign"></i> Pilih Pembayaran</h2>
-            <div id="payment-grid" class="payment-grid">
+            <h2 class="step-guide"><i class="fas fa-wallet"></i> Pilih Pembayaran</h2>
+            <p class="step-description">Pilih metode pembayaran yang mudah dan cepat untuk Anda.</p>
+            <div class="payment-grid" id="payment-grid">
                 </div>
         </div>
 
         <div class="card-section summary-section">
-            <h2 class="step-guide"><i class="fas fa-clipboard-list"></i> Ringkasan Pesanan</h2>
+            <h2 class="step-guide"><i class="fas fa-receipt"></i> Ringkasan Pembelian</h2>
             <div id="summary-box" class="summary-box">
                 <p>Pilih nominal & pembayaran untuk melihat ringkasan.</p>
             </div>
-            <button id="checkout-btn" class="btn-checkout">Bayar Sekarang</button>
+            <button id="checkout-btn" class="btn-checkout mt-3">Beli Sekarang</button>
         </div>
-
-    </div>
+    </main>
 
     <div id="modal-overlay" class="modal-overlay">
-        <div id="checkout-modal" class="modal-content modal-checkout" style="display:none;">
+        <div id="checkout-modal" class="modal-content">
             <div class="modal-header">
-                <h3>Selesaikan Pembayaran</h3>
+                <h3>Konfirmasi Pembelian</h3>
                 <span class="modal-close-btn">&times;</span>
             </div>
-            <div id="checkout-summary" class="modal-body">
+            <div class="modal-body" id="checkout-summary">
                 </div>
         </div>
 
-        <div id="qris-fullscreen-modal" class="modal-content modal-qris" style="display:none;">
+        <div id="qris-fullscreen-modal" class="modal-content qris-fullscreen-modal">
             <div class="modal-header">
-                <h3>QRIS Pembayaran</h3>
+                <h3>QRIS Anda</h3>
                 <span class="modal-close-btn">&times;</span>
             </div>
-            <div class="modal-body">
-                <img id="qris-fullscreen-img" src="" alt="QRIS" class="qris-fullscreen-img">
+            <div class="modal-body" style="text-align: center;">
+                <img id="qris-fullscreen-img" src="" alt="QRIS Penuh" class="qris-fullscreen-img">
             </div>
         </div>
     </div>
