--- a/game.html
+++ b/game.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Up Game | Walzlonely.shop</title>
+    <title>Top Up Game | WalzShop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800;900&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,7 +18,7 @@
                 <i class="fas fa-arrow-left"></i> Kembali
             </a>
             <a href="index.html" class="brand-logo">
-                <span class="logo-text">Walzlonely</span><span class="logo-accent">.shop</span>
+                <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
             </a>
         </div>
     </nav>
