--- a/game.html
+++ b/game.html
@@ -51,6 +51,16 @@
         </div>
 
         <div class="card-section">
+            <h2 class="step-guide"><i class="fas fa-percent"></i> Masukkan Kode Voucher</h2>
+            <p class="step-description">Jika Anda memiliki kode voucher, masukkan di sini untuk mendapatkan diskon.</p>
+            <div class="input-group voucher-group">
+                <input type="text" id="voucher-input" placeholder="Kode Voucher">
+                <button id="voucher-btn" class="btn-primary btn-sm">Gunakan</button>
+            </div>
+            <div id="voucher-status"></div>
+        </div>
+
+        <div class="card-section">
             <h2 class="step-guide"><i class="fas fa-wallet"></i> Pilih Pembayaran</h2>
             <p class="step-description">Pilih metode pembayaran yang mudah dan cepat untuk Anda.</p>
             <div class="payment-grid" id="payment-grid">
