--- a/game.html
+++ b/game.html
@@ -3,98 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Up Game | WalzShop</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800;900&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>Top Up Game - WalzShop</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body data-page="game">
-
-    <nav class="navbar">
+    <header class="navbar">
         <div class="container navbar-container">
-            <a href="index.html" class="btn-back">
-                <i class="fas fa-arrow-left"></i> Kembali
-            </a>
             <a href="index.html" class="brand-logo">
                 <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
             </a>
+            <span class="brand-tagline">TOP UP INSTAN & AMAN</span>
         </div>
-    </nav>
+    </header>
 
-    <main class="container game-main-content">
-        <div class="game-header">
-            <img id="game-banner" src="" alt="Game Banner" class="game-banner">
-            <div class="game-info">
-                <h1 id="game-title" class="game-title">Nama Game</h1>
-                <p id="game-guide" class="game-guide">Panduan menemukan ID game akan muncul di sini.</p>
+    <main class="main-content container">
+        <div class="card game-header">
+            <img id="game-banner" class="game-banner" src="" alt="Game Banner">
+            <h1 id="game-title" class="game-title">Nama Game</h1>
+            <p id="game-guide" class="guide-text"></p>
+        </div>
+
+        <div class="card section-card">
+            <h2 class="section-title">1. Masukkan Data Akun</h2>
+            <div class="form-group">
+                <label for="user-id">User ID:</label>
+                <input type="text" id="user-id" placeholder="Masukkan User ID Anda">
+            </div>
+            <div class="form-group" id="server-group">
+                <label for="server-id">Server ID:</label>
+                <input type="text" id="server-id" placeholder="Masukkan Server ID Anda">
             </div>
         </div>
 
-        <div class="card-section">
-            <h2 class="step-guide"><i class="fas fa-user"></i> Masukkan ID Game</h2>
-            <p class="step-description">Untuk menemukan ID Game, klik pada ikon profil di dalam game.</p>
-            <div class="input-group">
-                <input type="text" id="user-id" placeholder="Masukkan User ID">
-            </div>
-            <div class="input-group" id="server-group" style="display: none;">
-                <input type="text" id="server-id" placeholder="Masukkan Server ID (contoh: 1234)">
-            </div>
+        <div class="card section-card">
+            <h2 class="section-title">2. Pilih Nominal Top Up</h2>
+            <div id="product-grid" class="product-grid"></div>
         </div>
 
-        <div class="card-section">
-            <h2 class="step-guide"><i class="fas fa-gem"></i> Pilih Nominal</h2>
-            <p class="step-description">Pilih nominal yang diinginkan, pastikan sesuai dengan kebutuhan Anda.</p>
-            <div class="product-grid" id="product-grid">
-                </div>
+        <div class="card section-card">
+            <h2 class="section-title">3. Pilih Metode Pembayaran</h2>
+            <div id="payment-grid" class="payment-grid"></div>
         </div>
-
-        <div class="card-section">
-            <h2 class="step-guide"><i class="fas fa-percent"></i> Masukkan Kode Voucher</h2>
-            <p class="step-description">Jika Anda memiliki kode voucher, masukkan di sini untuk mendapatkan diskon.</p>
-            <div class="input-group voucher-group">
-                <input type="text" id="voucher-input" placeholder="Kode Voucher">
-                <button id="voucher-btn" class="btn-primary btn-sm">Gunakan</button>
-            </div>
-            <div id="voucher-status"></div>
-        </div>
-
-        <div class="card-section">
-            <h2 class="step-guide"><i class="fas fa-wallet"></i> Pilih Pembayaran</h2>
-            <p class="step-description">Pilih metode pembayaran yang mudah dan cepat untuk Anda.</p>
-            <div class="payment-grid" id="payment-grid">
-                </div>
-        </div>
-
-        <div class="card-section summary-section">
-            <h2 class="step-guide"><i class="fas fa-receipt"></i> Ringkasan Pembelian</h2>
-            <div id="summary-box" class="summary-box">
+        
+        <div class="card section-card">
+            <h2 class="section-title">4. Ringkasan & Pembayaran</h2>
+            <div id="summary-box">
                 <p>Pilih nominal & pembayaran untuk melihat ringkasan.</p>
             </div>
-            <button id="checkout-btn" class="btn-checkout mt-3">Beli Sekarang</button>
+            <div class="voucher-group">
+                <input type="text" id="voucher-input" placeholder="Masukkan kode voucher">
+                <button id="voucher-btn">Terapkan</button>
+            </div>
+            <p id="voucher-status" class="voucher-status"></p>
+            <button id="checkout-btn" class="btn-primary">Beli Sekarang</button>
         </div>
     </main>
 
+    <footer class="footer">
+        <div class="container footer-content">
+            <a href="index.html" class="brand-logo footer-logo">
+                <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
+            </a>
+            <p class="footer-desc">
+                WalzShop adalah platform top-up game yang menyediakan berbagai kebutuhan in-game item dengan proses cepat dan terpercaya.
+            </p>
+            <p class="footer-copyright">&copy; 2025 <b>WalzShop</b> — Website Top up Termurah🔥.</p>
+        </div>
+    </footer>
+
     <div id="modal-overlay" class="modal-overlay">
         <div id="checkout-modal" class="modal-content">
-            <div class="modal-header">
-                <h3>Konfirmasi Pembelian</h3>
-                <span class="modal-close-btn">&times;</span>
             </div>
-            <div class="modal-body" id="checkout-summary">
-                </div>
-        </div>
-
-        <div id="qris-fullscreen-modal" class="modal-content qris-fullscreen-modal">
-            <div class="modal-header">
-                <h3>QRIS Anda</h3>
-                <span class="modal-close-btn">&times;</span>
-            </div>
-            <div class="modal-body" style="text-align: center;">
-                <img id="qris-fullscreen-img" src="" alt="QRIS Penuh" class="qris-fullscreen-img">
-            </div>
-        </div>
     </div>
 
     <script src="script.js"></script>
