--- a/game.html
+++ b/game.html
@@ -20,6 +20,10 @@
     </header>
 
     <main class="main-content container">
+        <button onclick="window.history.back()" class="btn-back">
+            <i class="fas fa-arrow-left"></i> Kembali
+        </button>
+
         <div class="card game-header">
             <img id="game-banner" class="game-banner" src="" alt="Game Banner">
             <h1 id="game-title" class="game-title">Nama Game</h1>
