--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body data-page="index">
     <header class="navbar">
@@ -18,19 +19,19 @@
         </div>
     </header>
 
-    <section class="hero-section">
-        <div class="hero-slider-wrapper">
+    <main>
+        <section class="hero-section">
+            <div class="hero-slider-wrapper"></div>
+            <div class="container hero-content">
+                <h1 class="hero-title">Top Up Game Favoritmu</h1>
+                <p class="hero-subtitle">Instan, aman, dan harga terjangkau.</p>
             </div>
-        <div class="hero-slider-overlay"></div>
-        <div class="hero-content container">
-            <h1 class="hero-title">Top Up Game Favoritmu Instan & Aman</h1>
-            <p class="hero-subtitle">Pilih game, masukkan data, langsung isi saldo & item!</p>
-        </div>
-    </section>
+        </section>
 
-    <main class="main-content container">
-        <h2 class="section-title">Pilih Game</h2>
-        <div id="games-grid" class="games-grid"></div>
+        <section class="game-selection-section container">
+            <h2 class="section-title">Pilih Game</h2>
+            <div id="games-grid" class="games-grid"></div>
+        </section>
     </main>
 
     <footer class="footer">
