--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WalzShop - Top Up Game Instan & Aman</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body data-page="index">
@@ -21,7 +20,6 @@
 
     <main>
         <section class="hero-section">
-            <div class="hero-slider-wrapper"></div>
             <div class="container hero-content">
                 <h1 class="hero-title">Top Up Game Favoritmu</h1>
                 <p class="hero-subtitle">Instan, aman, dan harga terjangkau.</p>
@@ -29,8 +27,10 @@
         </section>
 
         <section class="game-selection-section container">
-            <h2 class="section-title">Pilih Game</h2>
-            <div id="games-grid" class="games-grid"></div>
+            <div class="content-box">
+                <h2 class="section-title">Pilih Game</h2>
+                <div id="games-grid" class="games-grid"></div>
+            </div>
         </section>
     </main>
 
