--- a/game.html
+++ b/game.html
@@ -9,20 +9,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body data-page="game">
-    <header class="navbar">
+    <header class="navbar game-navbar">
         <div class="container navbar-container">
             <a href="index.html" class="brand-logo">
                 <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
             </a>
-            <span class="brand-tagline">TOP UP INSTAN & AMAN</span>
+            <button onclick="window.history.back()" class="btn-back">
+                <i class="fas fa-arrow-left"></i> Kembali
+            </button>
         </div>
     </header>
 
     <main class="main-content container">
-        <button onclick="window.history.back()" class="btn-back">
-            <i class="fas fa-arrow-left"></i> Kembali
-        </button>
-
         <div class="content-box">
             <div class="game-header">
                 <img id="game-banner" class="game-banner" src="" alt="Game Banner">
