--- a/index.html
+++ b/index.html
@@ -14,15 +14,22 @@
             <a href="index.html" class="brand-logo">
                 <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
             </a>
-            <span class="brand-tagline">TOP UP INSTAN & AMAN</span>
         </div>
     </header>
 
     <main>
-        <section class="hero-section">
-            <div class="container hero-content">
-                <h1 class="hero-title">Top Up Game Favoritmu</h1>
-                <p class="hero-subtitle">Instan, aman, dan harga terjangkau.</p>
+        <section class="container hero-section">
+            <h1 class="hero-title">Top Up Game Favoritmu</h1>
+            <p class="hero-subtitle">Instan, aman, dan harga terjangkau.</p>
+        </section>
+
+        <section class="promo-section container">
+            <div class="content-box">
+                <h2 class="section-title">✨ Top Promo</h2>
+                <div class="slider-container">
+                    <div class="slider-track" id="promo-slider"></div>
+                    <div class="slider-dots-container" id="slider-dots"></div>
+                </div>
             </div>
         </section>
 
