--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Up Game - WalzShop</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body data-page="game">
@@ -26,7 +26,10 @@
                 <img id="game-banner" class="game-banner" src="" alt="Game Banner">
                 <div class="game-info">
                     <h1 id="game-title" class="game-title">Nama Game</h1>
-                    <p id="game-guide" class="guide-text"></p>
+                    <div class="guide-container">
+                        <i class="fas fa-info-circle guide-icon"></i>
+                        <p id="game-guide" class="guide-text"></p>
+                    </div>
                 </div>
             </div>
 
