--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WalzShop - Top Up Game Instan & Aman</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body data-page="index">
@@ -25,7 +25,6 @@
 
         <section class="promo-section container">
             <div class="content-box">
-                <h2 class="section-title">✨ Top Promo</h2>
                 <div class="slider-container">
                     <div class="slider-track" id="promo-slider"></div>
                     <div class="slider-dots-container" id="slider-dots"></div>
