--- a/index.html
+++ b/index.html
@@ -3,41 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WalzShop - Top Up Game Instan & Aman</title>
+    <title>WalzShop - Top Up Game Termurah & Tercepat</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body data-page="index">
+    
     <header class="navbar">
         <div class="container navbar-container">
             <a href="index.html" class="brand-logo">
                 <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
             </a>
+            <p class="tagline">Top Up Game Termurah & Terpercaya</p>
         </div>
     </header>
 
-    <main>
-        <section class="container hero-section">
-            <h1 class="hero-title">Top Up Game Favoritmu</h1>
-            <p class="hero-subtitle">Instan, aman, dan harga terjangkau.</p>
+    <main class="main-content container">
+
+        <section class="promo-section">
+            <div class="slider-container">
+                <div id="promo-slider" class="slider-wrapper"></div>
+            </div>
+            <div id="slider-dots" class="slider-dots"></div>
         </section>
 
-        <section class="promo-section container">
-            <div class="content-box">
-                <div class="slider-container">
-                    <div class="slider-track" id="promo-slider"></div>
-                    <div class="slider-dots-container" id="slider-dots"></div>
-                </div>
-            </div>
+        <section class="game-list-section">
+            <h2 class="section-title">Pilih Game</h2>
+            <div id="games-grid" class="game-grid"></div>
         </section>
 
-        <section class="game-selection-section container">
-            <div class="content-box">
-                <h2 class="section-title">Pilih Game</h2>
-                <div id="games-grid" class="games-grid"></div>
-            </div>
-        </section>
     </main>
 
     <footer class="footer">
@@ -51,6 +46,7 @@
             <p class="footer-copyright">&copy; 2025 <b>WalzShop</b> — Website Top up Termurah🔥.</p>
         </div>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
