--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <title>Top Up Game - WalzShop</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body data-page="game">
     <header class="navbar game-navbar">
@@ -14,7 +14,7 @@
             <a href="index.html" class="brand-logo">
                 <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
             </a>
-            <button onclick="window.history.back()" class="btn-back">
+            <button onclick="window.history.back()" class="btn-back" aria-label="Kembali ke halaman sebelumnya">
                 <i class="fas fa-arrow-left"></i> Kembali
             </button>
         </div>
@@ -27,7 +27,7 @@
                 <div class="game-info">
                     <h1 id="game-title" class="game-title">Nama Game</h1>
                     <div class="guide-container">
-                        <i class="fas fa-info-circle guide-icon"></i>
+                        <i class="fas fa-info-circle guide-icon" aria-hidden="true"></i>
                         <p id="game-guide" class="guide-text"></p>
                     </div>
                 </div>
@@ -37,11 +37,11 @@
                 <h2 class="section-title">1. Masukkan Data Akun</h2>
                 <div class="form-group">
                     <label for="user-id">User ID:</label>
-                    <input type="text" id="user-id" placeholder="Masukkan User ID Anda">
+                    <input type="text" id="user-id" placeholder="Masukkan User ID Anda" required aria-required="true">
                 </div>
                 <div class="form-group" id="server-group">
                     <label for="server-id">Server ID:</label>
-                    <input type="text" id="server-id" placeholder="Masukkan Server ID Anda">
+                    <input type="text" id="server-id" placeholder="Masukkan Server ID Anda" required aria-required="true">
                 </div>
             </div>
 
@@ -54,7 +54,7 @@
                 <h2 class="section-title">3. Pilih Metode Pembayaran</h2>
                 <div id="payment-grid" class="payment-grid"></div>
             </div>
-            
+
             <div class="section-card">
                 <h2 class="section-title">4. Ringkasan & Pembayaran</h2>
                 <div id="summary-box">
@@ -62,9 +62,9 @@
                 </div>
                 <div class="voucher-group">
                     <input type="text" id="voucher-input" placeholder="Masukkan kode voucher">
-                    <button id="voucher-btn">Terapkan</button>
+                    <button id="voucher-btn" class="btn-secondary">Terapkan</button>
                 </div>
-                <p id="voucher-status" class="voucher-status"></p>
+                <p id="voucher-status" class="voucher-status" role="alert"></p>
                 <button id="checkout-btn" class="btn-primary">Beli Sekarang</button>
             </div>
         </div>
@@ -83,8 +83,7 @@
     </footer>
 
     <div id="modal-overlay" class="modal-overlay">
-        <div id="checkout-modal" class="modal-content">
-            </div>
+        <div id="checkout-modal" class="modal-content"></div>
     </div>
 
     <script src="script.js"></script>
