--- a/index.html
+++ b/index.html
@@ -3,47 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WalzShop - Top Up Game Termurah & Tercepat</title>
+    <title>Walz Store - Top Up Murah & Cepat</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body data-page="index">
-    
+
     <header class="navbar">
         <div class="container navbar-container">
             <a href="index.html" class="brand-logo">
-                <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
+                <span class="logo-text">WALZ</span>
+                <span class="logo-accent">STORE</span>
+                <p class="tagline">Top Up Game Murah</p>
             </a>
-            <p class="tagline">Top Up Game Termurah & Terpercaya</p>
+            <a href="#" class="btn-back" style="display: none;">
+                <i class="fas fa-arrow-left"></i> Kembali
+            </a>
         </div>
     </header>
 
-    <main class="main-content container">
+    <main class="main-content">
+        <div class="container">
+            <section class="promo-section">
+                <div class="slider-container">
+                    <div id="promo-slider" class="slider-wrapper">
+                        </div>
+                </div>
+                <div id="slider-dots" class="slider-dots">
+                    </div>
+            </section>
 
-        <section class="promo-section">
-            <div class="slider-container">
-                <div id="promo-slider" class="slider-wrapper"></div>
-            </div>
-            <div id="slider-dots" class="slider-dots"></div>
-        </section>
-
-        <section class="game-list-section">
-            <h2 class="section-title">Pilih Game</h2>
-            <div id="games-grid" class="game-grid"></div>
-        </section>
-
+            <section class="content-box">
+                <h2 class="section-title">Pilih Game Favoritmu</h2>
+                <div id="games-grid" class="game-grid">
+                    </div>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
         <div class="container footer-content">
-            <a href="index.html" class="brand-logo footer-logo">
-                <span class="logo-text">Walz</span><span class="logo-accent">Shop</span>
-            </a>
+            <div class="footer-logo">
+                <span class="logo-text">WALZ</span>
+                <span class="logo-accent">STORE</span>
+            </div>
             <p class="footer-desc">
-                WalzShop adalah platform top-up game yang menyediakan berbagai kebutuhan in-game item dengan proses cepat dan terpercaya.
+                Walz Store adalah platform top up game terpercaya. Kami menyediakan layanan top up termurah dengan proses yang cepat dan aman. Dukungan pelanggan 24/7.
             </p>
-            <p class="footer-copyright">&copy; 2025 <b>WalzShop</b> — Website Top up Termurah🔥.</p>
+            <div class="footer-social">
+                <a href="https://wa.me/6282298902274" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp fa-lg"></i></a>
+            </div>
+            <p class="footer-copyright">&copy; 2024 Walz Store. All rights reserved.</p>
         </div>
     </footer>
 
